# styles

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  build.rs  dx.json  index.html  output.css  package-lock.json  style.css  styles.fbs  styles.toml
.devcontainer/: devcontainer.json
.dx/: cache.fbs  styles.fbs
.dx/cache/: db  snap.000000000000CE46
.idx/: dev.nix
libs/: INSPIRATIONS.md  config.toml  dx_io.rs  git_mission_failed.rs  palettes.ts  presets.ts  regex_cache_appending.rs
libs/header/color/: cli.rs
libs/platform/: unix.rs
libs/playgrounds/: README.md
libs/playgrounds/html/: index.html
libs/playgrounds/nextjs/: bun.lockb  next.config.ts  package.json
libs/playgrounds/nextjs/app/: layout.tsx  page.tsx
libs/src/: data_manager.rs  engine.rs  generator.rs  lib.rs  parser.rs  utils.rs  watcher.rs
playgrounds/html/: README.md  style.css
src/: copilot.rs  gemini.rs  grok.rs  main.rs  parsing_and_sorting.rs  regex.rs  style.rs  test.rs
src/config/: mod.rs
src/core/: mod.rs
src/datasource/: mod.rs
src/generator/: mod.rs
src/parser/: mod.rs
src/telemetry/: mod.rs
src/watcher/: mod.rs
src/wathcher/: mod.rs
trash/: essencefromexistence.rs  grok.rs  new.rs  old.rs  test.rs
trash/libs/: ANIMATION.md  README.md  colors.toml  dx_styles.rs  html.rs  io.rs  output.css  watchexec.rs
trash/libs/header/: mod.rs
trash/libs/header/color/: lib.rs
trash/libs/platform/: mod.rs  unsupported.rs  windows.rs
trash/libs/playgrounds/html/: styles.css
trash/libs/playgrounds/nextjs/app/: globals.css
trash/libs/src/: cache.rs  composites.rs  config.rs  interner.rs  io.rs  main.rs
