[package]
name = "styles"
version = "0.0.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
colored = "3.0.0"
cssparser = "0.35.0"
memchr = "2.7.5"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
rayon = "1.11.0"
# ahash = "0.8.12"
# blake3 = "1.8.2"
# colored = "3.0.0"
# cssparser = "0.35.0"
# html5ever = "0.35.0"
# memchr = "2.7.5"
# memmap2 = "0.9.7"
# notify = "8.2.0"
# notify-debouncer-full = "0.6.0"
# once_cell = "1.21.3"
# parking_lot = "0.12.4"
# rayon = "1.11.0"
# regex = "1.11.1"
# seahash = "4.1.0"
# sysinfo = "0.37.0"
# tendril = "0.4.3"
# twox-hash = "2.1.1"
# xxhash-rust = "0.8.15"

# [dependencies]
# colored = "3.0.0"
# lightningcss = "1.0.0-alpha.67"
# lru = "0.16.0"
# notify = "8.2.0"
# notify-debouncer-full = "0.6.0"
# oxc_allocator = "0.80.0"
# oxc_ast = "0.80.0"
# oxc_parser = "0.80.0"
# oxc_span = "0.80.0"
# walkdir = "2.5.0"
# crossbeam-deque = "0.8.6"
# futures = "0.3.31"
# memmap2 = "0.9.7"
# rayon = "1.10.0"
# flatbuffers = "25.2.10"
# flatc-rust = "0.2.0"
# rkyv = "0.8.11"
# sled = "0.34.7"
# serde = { version = "1.0.219", features = ["derive"] }
# bincode = "2.0.1"
# libc = "0.2.175"
# sysinfo = "0.37.0"
# smallvec = "1.13"
# seahash = "4.1.0"
# once_cell = "1.19.0"
# cssparser = "0.35.0"
# serde_json = "1.0.142"
# toml = "0.9.5"
# html5ever = "0.35.0"
# termcolor = "1.4.1"
# markup5ever_rcdom = "0.35.0"
# regex = "1.11.1"
# tendril = "0.4.3"
# similar = "2.7.0"
# blake3 = "1.8.2"
# tokio = { version = "1.47.1", features = ["full"] }
# grass = "0.13.4"
# thiserror = "2.0.15"
# tera = "1.20.0"
# tl = "0.7.8"
# log = "0.4.27"
# env_logger = "0.11.8"
# watchexec = "8.0.1"
# miette = "7.6.0"
# watchexec-events = "6.0.0"
# watchexec-signals = "5.0.0"
# tracing-subscriber = "0.3.19"
# gix = "0.73.0"
# imara-diff = "0.2.0"
# diff = "0.1.13"
# gix = "0.73.0"
# imara-diff = "0.2.0"

[build-dependencies]
flatc-rust = "0.2.0"
toml = "0.9.5"
flatbuffers = "25.2.10"
cc = "1.2.31"
serde = { version = "1.0.219", features = ["derive"] }
